--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,8 @@
-﻿altair==5.4.1
-attrs==24.2.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-gitdb==4.0.11
-GitPython==3.1.43
-gunicorn==23.0.0
-idna==3.8
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-narwhals==1.8.0
-numpy==2.1.1
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-protobuf==5.28.1
-pyarrow==17.0.0
-pydeck==0.9.1
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-referencing==0.35.1
-requests==2.32.3
-rich==13.8.1
-rpds-py==0.20.0
-six==1.16.0
-smmap==5.0.1
 streamlit==1.38.0
-tenacity==8.5.0
-toml==0.10.2
-tornado==6.4.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.3
-watchdog==4.0.2
+numpy==1.26.4
+pandas==2.2.3
+requests==2.32.3
+scikit-learn==1.5.2
+spacy==3.7.6
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
